examples/errors/lgtredef.lgt

:- object(lgtredef).

	% redefinition of Logtalk built-in predicate
	current_object(_).

:- end_object.
